# abproof

./: CONTRACT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dist  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/adrs/: 0001-paired-test-for-gated-binary-metrics.md  0002-replication-unit-and-gate-contrast.md
docs/plans/: 0001-measurement-statistics-correctness.md  proof-abproof-7.py
docs/specs/: 0001-measurement-statistics-correctness.md
src/: corpus.rs  driver.rs  env_filter.rs  experiment.rs  judge.rs  lib.rs  main.rs  report.rs  run.rs  score.rs  stats.rs  worktree.rs
tests/: claude_cli_driver_contract.rs  live_smoke.rs  local_driver_contract.rs  stats_golden.rs  stub_pipeline.rs
tests/corpus-fixture/: NOTICE.md  cross-loop-local-vs-claude.yaml
tests/corpus-fixture/red-baseline/cpp-all-your-base/: meta.yaml
tests/corpus-fixture/red-baseline/py-add/: acceptance_test.py  context.md  meta.yaml  stub.py
tests/fixtures/baseline/: cxpak-context-ab.json
tests/fixtures/experiments/: bad-context.yaml  cross-loop-no-model.yaml  cross-loop-valid.yaml  empty-battery.yaml  gate-alpha-out-of-range.yaml  no-gated-metric.yaml  tolerance-unknown-key.yaml  valid-same-loop.yaml  zero-reps.yaml
tests/golden/: oracle.py
